[package]
name = "ruslock"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust client for slock"
repository = "https://github.com/snower/ruslock"

[features]
default = ["blocking", "aio", "replset"]
blocking = []
aio = ["dep:tokio"]
replset = []

[dependencies]
bitflags = "2"
md-5 = "0.10"
rand = "0.8"
socket2 = "0.5"
thiserror = "1"
tokio = { version = "1", optional = true, features = ["net", "sync", "time", "rt", "macros", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "rt-multi-thread", "macros", "io-util"] }
